table of contents

--- a/handson_tutorial.ipynb
+++ b/handson_tutorial.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hands-on Physical Reservoir Computing\n",
+    "\n",
+    "Table of contents\n",
+    "1. Preparation\n",
+    "    - [Load the dataset](#loadthe)\n",
+    "2. Reservoir computing\n",
+    "    - [Set up the reservoir](#set-up-the-reservoir)\n",
+    "    - [Collect reservoir states](#collect-reservoir-states)\n",
+    "    - [Evaluate performance](#evaluate-the-performance)\n",
+    "5. Optimize the reservoir\n",
+    "    - [Readout training](#optimizing-the-reservoir-readout-training)\n",
+    "    - [Reservoir tuning](#optimizing-the-reservoir-reservoir-tuning): [timescale](#timescales-leak-rate), [dynamical regime](#dynamical-regime-spectral-radius), [capacity](#capacity-number-of-neurons)\n",
+    "6. Final performance\n",
+    "    - [Optimize readout](#optimize-readout-training)\n",
+    "    - [Evaluate on testing data](#evaluate-performance-on-unseen-testing-data)\n",
+    "\n",
+    "<!-- <a class=\"anchor\" id=\"load-dataset\"></a> -->"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
