--- a/handson_tutorial.ipynb
+++ b/handson_tutorial.ipynb
@@ -8,19 +8,18 @@
     "\n",
     "Table of contents\n",
     "1. Preparation\n",
-    "    - [Load the dataset](#loadthe)\n",
+    "    - [Load the dataset](#load-the-dataset)\n",
     "2. Reservoir computing\n",
     "    - [Set up the reservoir](#set-up-the-reservoir)\n",
     "    - [Collect reservoir states](#collect-reservoir-states)\n",
+    "    - [Train readout map](#train-the-readout-map)\n",
     "    - [Evaluate performance](#evaluate-the-performance)\n",
     "5. Optimize the reservoir\n",
     "    - [Readout training](#optimizing-the-reservoir-readout-training)\n",
     "    - [Reservoir tuning](#optimizing-the-reservoir-reservoir-tuning): [timescale](#timescales-leak-rate), [dynamical regime](#dynamical-regime-spectral-radius), [capacity](#capacity-number-of-neurons)\n",
     "6. Final performance\n",
     "    - [Optimize readout](#optimize-readout-training)\n",
-    "    - [Evaluate on testing data](#evaluate-performance-on-unseen-testing-data)\n",
-    "\n",
-    "<!-- <a class=\"anchor\" id=\"load-dataset\"></a> -->"
+    "    - [Evaluate on testing data](#evaluate-performance-on-unseen-testing-data)"
    ]
   },
   {
@@ -50,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the dataset\n",
+    "## Load the dataset <a class=\"anchor\" id=\"load-the-dataset\"></a>\n",
     "\n",
     "We are loading the [Iris](https://www.kaggle.com/datasets/uciml/iris) flower classification dataset (downloaded from [Kaggle](https://www.kaggle.com/), see `iris.csv` in this directory). This is one of the best-known pattern recognition tasks. It is a simple task, but the classes are not linearly separable. \n",
     "\n",
@@ -348,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set up the reservoir\n",
+    "## Set up the reservoir <a class=\"anchor\" id=\"set-up-the-reservoir\"></a>\n",
     "\n",
     "Now that the input signal is prepared, we will feed this signal to the reservoir. In physical reservoir computing, this reservoir is a physical system, but for this demonstration we will be modeling the reservoir in simulation with an Echo State Network, see the `reservoir.py` file for implementation details. "
    ]
@@ -388,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Collect reservoir states\n",
+    "## Collect reservoir states <a class=\"anchor\" id=\"collect-reservoir-states\"></a>\n",
     "\n",
     "Now that the reservoir has been created, we feed the input signal into the reservoir. To do this, we simply concatenate all input sequences and feed them into the reservoir. We can do this because we will discard the initial transient of each time series anyway (the so-called washout period, see below)."
    ]
@@ -442,7 +441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train the readout map\n",
+    "## Train the readout map  <a class=\"anchor\" id=\"train-the-readout-map\"></a>\n",
     "\n",
     "Now that we have the collected state matrix $X_{train}$ (`X_train`), we can use the training labels $Y_{train}$ (`y_train`) compute the readout map $\\hat W^{out}$ which maps the reservoir state to the output vector. We do this using ridge regression:\n",
     "$$\n",
@@ -478,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate the performance\n",
+    "## Evaluate the performance <a class=\"anchor\" id=\"evaluate-the-performance\"></a>\n",
     "\n",
     "Now that we computed the readout map, we can apply it to the reservoir states that we collected for the training data, in order to evaluate the accuracy of our reservoir classifier. "
    ]
@@ -649,7 +648,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optimizing the reservoir: readout training\n",
+    "## Optimizing the reservoir: readout training <a class=\"anchor\" id=\"optimizing-the-reservoir-readout-training\"></a>\n",
     "\n",
     "The resulting performance above (70% testing accuracy) is not good. We would expect to solve the Iris classification task with >90% testing accuracy. Since we are working with physical reservoirs, optimizing the reservoir can be quite expensive in terms of time and other resources. We therefore begin by optimizing the readout training procedure, which is anyway done on a digital computer. To make this easy, we abstract the training into function and then run a sweep over different learning parameters (here, we just tune the washout length and the regularization parameter $\\alpha$) and compare the results. As described in the paper, we need to do this in a validation loop because we cannot optimize our parameters based on the testing performance."
    ]
@@ -1085,7 +1084,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optimizing the reservoir: reservoir tuning\n",
+    "## Optimizing the reservoir: reservoir tuning <a class=\"anchor\" id=\"optimizing-the-reservoir-reservoir-tuning\"></a>\n",
     "\n",
     "Since our goal here is to simulate the process of tuning a physical reservoir, we will restrict ourselves in the number of possible reservoir configurations we can test. In simulation studies, we could simply run an extensive search over a large set of possible reservoir configurations and then choose the best one according to our validation and training accuracies. We will not do this here. Instead, we will take each one of the three reservoir parameters (number of neurons, spectral radius, and leak rate) and run only a few different reservoirs. "
    ]
@@ -1094,7 +1093,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Timescales: leak rate\n",
+    "### Timescales: leak rate <a class=\"anchor\" id=\"timescales-leak-rate\"></a>\n",
     "\n",
     "We can begin by varying the leak rate of the reservoir, which determines the timescale of the reservoir's dynamics."
    ]
@@ -1247,7 +1246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dynamical regime: spectral radius"
+    "### Dynamical regime: spectral radius <a class=\"anchor\" id=\"dynamical-regime-spectral-radius\"></a>"
    ]
   },
   {
@@ -1382,7 +1381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Capacity: number of neurons"
+    "### Capacity: number of neurons <a class=\"anchor\" id=\"capacity-number-of-neurons\"></a>"
    ]
   },
   {
@@ -1522,14 +1521,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final reservoir performance"
+    "## Final reservoir performance "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optimize readout training\n",
+    "### Optimize readout training <a class=\"anchor\" id=\"optimize-readout-training\"></a>\n",
     "\n",
     "We now optimize the readout training procedure for the reservoir configuration which we have found to work best. "
    ]
@@ -1828,7 +1827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate performance on unseen testing data"
+    "### Evaluate performance on unseen testing data <a class=\"anchor\" id=\"evaluate-performance-on-unseen-testing-data\"></a>"
    ]
   },
   {
