--- a/handson_tutorial.ipynb
+++ b/handson_tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Hands-on Physical Reservoir Computing\n",
     "\n",
-    "Table of contents\n",
+    "**Table of contents** (links do not work when viewed on GitHub.com)\n",
     "1. Preparation\n",
     "    - [Load the dataset](#load-the-dataset)\n",
     "2. Reservoir computing\n",
